Simplify naming; Fix default type values
