# agent/python/agent_protocol/models.py
@@ -1,6 +1,6 @@
 # generated by fastapi-codegen:
 #   filename:  ../openapi.yml
-#   timestamp: 2023-07-19T00:16:44+00:00
+#   timestamp: 2023-07-19T12:37:58+00:00
 
 from __future__ import annotations
 
@@ -9,55 +9,55 @@ from typing import Any, List, Optional
 from pydantic import BaseModel, Field
 
 
-class AgentTaskInput(BaseModel):
+class TaskInput(BaseModel):
     __root__: Any = Field(
         ..., description='Input parameters for the task. Any value is allowed.'
     )
 
 
-class AgentArtifact(BaseModel):
+class Artifact(BaseModel):
     __root__: Any = Field(
         ..., description='Artifact that the task has produced. Any value is allowed.'
     )
 
 
-class AgentStepInput(BaseModel):
+class StepInput(BaseModel):
     __root__: Any = Field(
         ..., description='Input parameters for the task step. Any value is allowed.'
     )
 
 
-class AgentStepOutput(BaseModel):
+class StepOutput(BaseModel):
     __root__: Any = Field(
         ..., description='Output that the task step has produced. Any value is allowed.'
     )
 
 
-class AgentTaskRequestBody(BaseModel):
-    input: Optional[AgentTaskInput] = None
+class TaskRequestBody(BaseModel):
+    input: Optional[TaskInput] = None
 
 
-class AgentTask(AgentTaskRequestBody):
+class Task(TaskRequestBody):
     task_id: str = Field(..., description='The ID of the task.')
-    artifacts: List[AgentArtifact] = Field(
-        ..., description='A list of artifacts that the task has produced.'
+    artifacts: Optional[List[Artifact]] = Field(
+        [], description='A list of artifacts that the task has produced.'
     )
 
 
-class AgentStepRequestBody(BaseModel):
-    input: Optional[AgentStepInput] = None
+class StepRequestBody(BaseModel):
+    input: Optional[StepInput] = None
 
 
-class AgentStepResult(BaseModel):
-    output: Optional[AgentStepOutput] = None
-    artifacts: List[AgentArtifact] = Field(
-        ..., description='A list of artifacts that the step has produced.'
+class StepResult(BaseModel):
+    output: Optional[StepOutput] = None
+    artifacts: Optional[List[Artifact]] = Field(
+        [], description='A list of artifacts that the step has produced.'
     )
     is_last: Optional[bool] = Field(
         False, description='Whether this is the last step in the task.'
     )
 
 
-class AgentStep(AgentStepRequestBody, AgentStepResult):
+class Step(StepRequestBody, StepResult):
     task_id: str = Field(..., description='The ID of the task this step belongs to.')
     step_id: str = Field(..., description='The ID of the task step.')
